# ChangelogGenerator

./: .gitignore  CHANGELOG.md  README.md  cli.py  install_proj.sh  pyproject.toml
generate/: ai_prompt.txt  generator.py  parse_commits.py  release_format.md
prompts/: __init__.py  ai_prompt.txt
src/changelog_gen/: cli.py  generator.py  parse_commits.py
src/changelog_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
