[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "changelog-generator"
version = "0.1.0"
description = "AI-powered changelog generator"
dependencies = ["ollama", "loguru", "click"]

[project.scripts]
changelog = "changelog_gen.cli:main"
